v0.3.0, 2022-??-??
-- Changes function signatures of fit functions in main, hence the minor version jump.
-- Added docstrings to main module
v0.2.0, 2022-07-18
-- Can pass parameter 'max_combinations' to gnies.utils.all_dags to return an error if the max. number of possible DAGs is too large
-- Refactoring of the fit functions in gnies.main; module API has changed
-- New functions utils.an and utils.desc, and corresponding tests
v0.1.1, 2022-07-07
-- Fixed wrong version number
v0.1.0, 2022-07-07
-- Implemented target selection by variance ranking; can be accessed by new parameter `approach` in the calls to gnies.fit; however, API of the function changed
v0.0.4, 2022-06-24
-- New parameter in gnies.fit to set lambda used by GES
-- Fixed bug in example
v0.0.3, 2022-06-21
-- Set gnies.scores as package in setup.py
-- Removed requirements.txt file
v0.0.2, 2022-06-15 -- Minor fixes to setup.py file and README.
v0.0.1, 2022-06-15 -- First version with a functioning implementation of GnIES + tests.