@@ -28,10 +28,11 @@
 # ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
+import numpy as np
+import ges
 from gnies.scores import GnIESScore as Score
 import gnies.utils as utils
-import ges
-import numpy as np
+
 
 # --------------------------------------------------------------------
 # Public API
@@ -288,7 +289,7 @@ def fit_rank(
     score_class = Score(data, full_I, lmbda=lmbda)
     current_estimate, current_score = _inner_procedure(score_class, full_I, **params)
     assert utils.is_dag(current_estimate)
-    _, omegas = score_class._mle_full(current_estimate)
+    _, omegas, _ = score_class._mle_full(current_estimate)
     variances = np.var(omegas, axis=0)
     order = list(np.argsort(variances))
     # Setup for the greedy outer procedure
